Fixes layout issues with new giant fonts (#753)
* 3-across integration pages

* smaller H1 font on mobile

* remove fixedHeight

* Update components/home/integrationCard.tsx


* Update scss/grouparoo.scss


* remove extra `}`

--- a/scss/grouparoo.scss
+++ b/scss/grouparoo.scss
@@ -63,6 +63,10 @@ h1 {
   font-weight: 800;
   line-height: 72px;
   letter-spacing: -1px;
+
+  @media screen and (max-width: 600px) {
+    font-size: 60px;
+  }
 }
 
 h2 {
